...
    <string name="graph_label_storage_rate_min">Min Storage Rate:</string>
    <string name="graph_unit_storage_rate">(%)</string>
    <string name="graph_unit_rainfall">(mm/10min)</string>
    <string name="graph_tooltip_rainfall">Rainfall:</string>
    <string name="graph_tooltip_storage_rate">Storage Rate:</string>
    <string name="main_graph_observation_title">Observation Data (Graph)</string>
    <string name="main_graph_rainfall_storage_select">Storage Rate / Catchment Rainfall</string>
    <string name="main_graph_volume_flow_select">Storage Volume / Inflow / Outflow</string>
    <string name="main_graph_rainfall_storage_history_select">Storage Rate (Year Comparison) / Catchment Rainfall</string>
    <string name="main_graph_volume_flow_history_select">Storage Volume (Year Comparison) / Inflow / Outflow</string>
    <string name="graph_historical_comparison_loading">Loading historical data…</string>
    <string name="graph_historical_comparison_error">The historical data could not be loaded.</string>
    <string name="graph_historical_comparison_retry">Retry</string>
    <string name="graph_line_chip_all_storage_rate">All Storage Rate</string>
    <string name="graph_line_chip_all_storage_volume">All Storage Volume</string>
    <string name="graph_line_chip_storage_rate">Storage Rate</string>
    <string name="graph_line_chip_rainfall">Catchment Rainfall</string>
    <string name="graph_line_chip_storage_volume">Storage Volume</string>
    <string name="graph_line_chip_inflow">Inflow</string>
    <string name="graph_line_chip_outflow">Outflow</string>
    <string name="graph_label_storage_volume_max">Max Storage Volume:</string>
...
